@@ -1,3 +1,7 @@
+20030216
+ - (djm) Make this work with -current pfsync
+ - (djm) Add support for older pfsync (<=3.4) with -DOLD_PFSYNC flag
+
 20031109
  - (djm) Lock underlying BPF device using ioctl available in OpenBSD 3.5
 
